src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Opportunity.Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Charges__c</fullName>
        <label>Additional Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_By_Phone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_No__c</fullName>
        <label>Customer PO No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Pay_Terms__c</fullName>
        <formula>Opportunity.Account.Freight_Pay_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight Pay Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <formula>Opportunity.Account.Inco_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inco Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <formula>TEXT( Opportunity.Account.Payment_Terms__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFS_Financed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TFS Financed</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>